--- a/.gitignore
+++ b/.gitignore
@@ -327,4 +327,8 @@ pip-selfcheck.json
 .history
 .ionide
 
+### Database backups
+backups/
+*.sql
+
 # End of https://www.toptal.com/developers/gitignore/api/python,visualstudiocode,django,macos,virtualenv
